# speakcaptcha

./: Dockerfile  README.md
backend/: .dockerignore  .editorconfig  .gitignore  babel.config.json  gulpfile.js  main.py  package.json  postcss.config.js  pyproject.toml  tailwind.config.js
backend/backend/: __init__.py  app.py
backend/backend/assets/css/: captcha.css
backend/backend/assets/js/: captcha.js
backend/backend/dependencies/: jinja2.py  servedist.py  staticfiles.py  user.py
backend/backend/lib/: auth.py  mongo.py  util.py
backend/backend/models/: __init__.py  application.py  user.py
backend/backend/routers/: captcha.py  developers.py
backend/backend/templates/: captcha.html
example/: .prettierrc  README.md  package.json
example/pages/: basic.tsx  index.tsx  with-events.tsx
example/pages/api/: basic.ts
frontend/: .prettierrc  index.html  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts  vite-env.d.ts
frontend/src/lib/: axios.ts  toast.ts  util.ts
frontend/src/lib/components/: ApplicationCard.svelte  DeveloperRoutes.svelte  DocumentationSidebar.svelte  Loading.svelte  Navbar.svelte  SpeakCaptchaDemo.svelte
frontend/src/lib/layouts/: documentation.svelte
frontend/src/lib/pages/: Accessibility.svelte  Index.svelte  NotFound.svelte  docs.svelte
frontend/src/lib/pages/developers/: [slug].svelte  auth.svelte  index.svelte  new.svelte
frontend/src/lib/pages/documentation/: _routes.svelte  index.svelte  (+5 more)
frontend/src/lib/stores/: applications.ts  user.ts
